# aiokafka_connection_stop

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
